--- a/Calculator/app/src/main/res/layout-land/activity_main.xml
+++ b/Calculator/app/src/main/res/layout-land/activity_main.xml
@@ -5,32 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/night_sky" />
+    <!--    <ImageView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:scaleType="centerCrop"-->
+    <!--        android:src="@drawable/night_sky" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="@dimen/screenMargin"
+        android:layout_marginTop="@dimen/screenMargin"
+        android:layout_marginRight="@dimen/screenMargin"
+        android:layout_marginBottom="@dimen/screenMargin"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:gravity="bottom|end"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="10dp"
-            android:textAlignment="gravity"
-            tools:text="0000"
-            android:textColor="@android:color/white"
-            android:textSize="30sp" />
+            style="@style/Text.Landscape"
+            tools:text="150 + 7" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -38,325 +31,174 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
+            <LinearLayout style="@style/ButtonsLine.Landscape">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonDeleteAll"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="C"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="@string/delete_all"
+                    android:textSize="@dimen/textSizeForTextButtonsLandscape" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonDeleteLast"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="Delete last"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="@string/delete_last"
+                    android:textSize="@dimen/textSizeForTextButtonsLandscape" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonPercent"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="%"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="%" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
+                <com.google.android.material.button.MaterialButton
 
-                <Button
                     android:id="@+id/buttonDivision"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="/"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="/" />
 
             </LinearLayout>
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+            <LinearLayout style="@style/ButtonsLine.Landscape">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/button7"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="7"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="7" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/button8"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="8"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="8" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/button9"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="9"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="9" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonMultiplication"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="x"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="x" />
 
             </LinearLayout>
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+            <LinearLayout style="@style/ButtonsLine.Landscape">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/button4"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="4"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="4" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/button5"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="5"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="5" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/button6"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="6"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="6" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonMinus"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="‒"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="‒" />
 
             </LinearLayout>
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+            <LinearLayout style="@style/ButtonsLine.Landscape">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/button1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="1"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="1" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/button2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="2"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="2" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/button3"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="3"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="3" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonPlus"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="+"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="+" />
 
             </LinearLayout>
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+            <LinearLayout style="@style/ButtonsLine.Landscape">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                tools:ignore="ExtraText">
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/button0"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="0"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="0" />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonDot"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="."
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="." />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonEqual"
+                    style="@style/ButtonPrimary"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="#FAE37F"
-                    android:text="="
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:layout_weight="2.1"
+                    android:text="=" />
 
             </LinearLayout>
 
