--- a/Calculator/app/src/main/res/layout/activity_main.xml
+++ b/Calculator/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/night_sky" />
+<!--    <ImageView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        android:src="@drawable/night_sky" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="@dimen/screenMargin"
+        android:layout_marginTop="@dimen/screenMargin"
+        android:layout_marginRight="@dimen/screenMargin"
+        android:layout_marginBottom="@dimen/screenMargin"
         android:orientation="vertical">
 
         <LinearLayout
@@ -33,327 +33,176 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:textAlignment="textEnd"
-                android:textColor="@android:color/white"
-                android:textSize="24sp" />
+                style="@style/Text"
+                tools:text="150 + 7" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="horizontal">
+            <LinearLayout style="@style/ButtonsLine">
 
-                <Button
+                <com.google.android.material.button.MaterialButton
+                    android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/buttonDeleteAll"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="@string/delete_all"
+                    android:textSize="@dimen/textSizeForTextButtons" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="C"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/buttonDeleteLast"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="@string/delete_last"
+                    android:textSize="@dimen/textSizeForTextButtons" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="Delete last"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/buttonPercent"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="%" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="%"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
                     android:id="@+id/buttonDivision"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="/"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="/" />
 
             </LinearLayout>
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+            <LinearLayout style="@style/ButtonsLine">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="horizontal">
-
-                <Button
+                <com.google.android.material.button.MaterialButton
+                    android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/button7"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="7" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="7"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/button8"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="8" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="8"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/button9"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="9" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="9"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
                     android:id="@+id/buttonMultiplication"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="x"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="x" />
 
             </LinearLayout>
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+            <LinearLayout style="@style/ButtonsLine">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="horizontal">
-
-                <Button
+                <com.google.android.material.button.MaterialButton
+                    android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/button4"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="4" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="4"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/button5"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="5" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="5"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/button6"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="6" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="6"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
                     android:id="@+id/buttonMinus"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="‒"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="‒" />
 
             </LinearLayout>
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+            <LinearLayout style="@style/ButtonsLine">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="horizontal">
-
-                <Button
+                <com.google.android.material.button.MaterialButton
+                    android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/button1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="1" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="1"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/button2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="2" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="2"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/button3"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="3" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="3"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
                     android:id="@+id/buttonPlus"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="+"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="+" />
 
             </LinearLayout>
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="5dp" />
+            <LinearLayout style="@style/ButtonsLine">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:orientation="horizontal"
-                tools:ignore="ExtraText">
-
-                <Button
+                <com.google.android.material.button.MaterialButton
+                    android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/button0"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:text="0" />
+
+                <com.google.android.material.button.MaterialButton
                     android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="0"
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
-
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                    android:layout_marginEnd="@dimen/spaceBetweenButtons"
                     android:id="@+id/buttonDot"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#DCDCDC"
-                    android:text="."
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:text="." />
 
-                <Space
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonEqual"
+                    style="@style/ButtonPrimary"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:background="#FAE37F"
-                    android:text="="
-                    android:textAlignment="center"
-                    android:textColor="#242424"
-                    android:textSize="20sp" />
+                    android:layout_weight="2.1"
+                    android:text="=" />
 
             </LinearLayout>
 
