--- a/Calculator/app/src/main/res/values/colors.xml
+++ b/Calculator/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+
+    <color name="grey_800">#EAEAEA</color>
+    <color name="grey_400">#4C4C4C</color>
+    <color name="grey_300">#2B2B2B</color>
+    <color name="grey_700">#DFDFDF</color>
+    <color name="grey_200">#1B1B1B</color>
+    <color name="yellow">#FFE989</color>
+    <color name="white">#FFFFFF</color>
+
 </resources>
