--- a/Calculator/app/src/main/res/layout/activity_main.xml
+++ b/Calculator/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,13 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonChooseTheme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/theme"
+                android:layout_gravity="end"/>
+
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
