--- a/Calculator/app/src/main/res/layout-land/activity_main.xml
+++ b/Calculator/app/src/main/res/layout-land/activity_main.xml
@@ -20,15 +20,33 @@
         android:layout_marginBottom="@dimen/screenMargin"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView"
-            style="@style/Text.Landscape"
-            tools:text="150 + 7" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonChooseTheme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:text="@string/theme" />
+
+            <TextView
+                android:id="@+id/textView"
+                style="@style/Text.Landscape"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="bottom|end"
+                tools:text="150 + 711" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:orientation="vertical">
 
             <LinearLayout style="@style/ButtonsLine.Landscape">
